# validflow

./: .gitignore  CHANGELOG.md  README.md  package.json  update-cargo-version.js  update-tauri-version.js
.github/workflows/: build-app.yml
.github/workflows.yml/: build-app.yml
validflow-backend/: Pipfile  build-backend.py  start.py
validflow-backend/app/: file_logs.db  main.py
validflow-backend/app/api/: error_logs.py  routes.py  rules.py
validflow-backend/app/core/: config.py  db.py
validflow-backend/app/crud/: error_log.py  rule.py
validflow-backend/app/models/: error_log.py  file_log.py  rule.py
validflow-backend/app/schemas/: rule.py
validflow-backend/app/services/: organizer.py  watcher.py
validflow-backend/app/utils/: file_rules.py
validflow-frontend/: index.html  package.json  tsconfig.json  vite.config.ts
validflow-frontend/src/: App.tsx  backend.ts  index.css  main.tsx
validflow-frontend/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
validflow-frontend/src-tauri/capabilities/: default.json
validflow-frontend/src-tauri/icons/: validflow.icns
validflow-frontend/src-tauri/src/: lib.rs  main.rs
validflow-frontend/src/components/: ErrorLogs.tsx  RuleBuilder.tsx
validflow-frontend/src/lib/: api.tsx
validflow-frontend/src/pages/: LandingPage.tsx
