[package]
name = "validflow"
version = "1.1.2"
description = "ValidFlow is a desktop software that automatically helps it's user to arrange their'files, folders and documents."
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"

tauri = { version = "2.6.2", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2.3.0"
